@@ -716,3 +716,4 @@ table.insert(tests, "two_parent_workspace_add_drop_rename")
 table.insert(tests, "two_parent_workspace_attrs")
 table.insert(tests, "two_parent_workspace_pivot_root")
 table.insert(tests, "two_parent_workspace_annotate")
+table.insert(tests, "two_parent_workspace_list")
