@@ -1,5 +1,9 @@
 2007-02-09  Zack Weinberg  <zackw@panix.com>
 
+	* cmd_list.cc (ls_known, ls_changed): Work in a two-parent workspace.
+	* tests/two_parent_workspace_list: New test.
+	* testsuite.lua: Add it.
+
 	* automate.cc (attributes): Fail gracefully in a two-parent workspace.
 	* tests/two_parent_workspace_commands_that_fail: Add test for
 	automate attributes.
